# mipt-4sem

./: README.md
sem1/MostUsedWords/: .gitignore
sem1/MostUsedWords/Debug/: MostUsedWords
sem1/MostUsedWords/src/: most_used_words.cpp
sem2/Vector2/: .gitignore
sem2/Vector2/Debug/: Vector2
sem2/Vector2/src/: test.cpp  vector2.cpp  vector2.h
sem3/DragonCurve/: .gitignore
sem3/DragonCurve/Debug/: DragonCurve
sem3/DragonCurve/src/: main.cpp
sem3/ForceLines/: .gitignore
sem3/ForceLines/Debug/: ForceLines
sem3/ForceLines/Release/: ForceLines
sem3/ForceLines/src/: charge.cpp  charge.h  main.cpp  vector2.cpp  vector2.h
sem3/Serpinski/: .gitignore
sem3/Serpinski/Debug/: Serpinski
sem3/Serpinski/src/: main.cpp
sem3/hero/: .gitignore
sem3/hero/Debug/: hero
sem3/hero/Release/: hero
sem3/hero/src/: charge.cpp  charge.h  hero.cpp  hero.h  main.cpp
sem4/Collision/: CMakeLists.txt
sem4/Collision/include/: charge.h  global.h  particle.h  vector2.h
sem4/Collision/src/: charge.cpp  main.cpp  particle.cpp  vector2.cpp
sem6/opencv/: CMakeLists.txt
sem6/opencv/src/: main.cpp
